src/test/deca/codegen/invalid/resultats/var5-ima.res
  ** IMA ** ERREUR ** Ligne 45 : 
    CMP avec op1 : entier et op2 : indefini
